# emeet-cli

./: .gitignore  Readme.md  pyproject.toml
docs/: LINUX_IMPLEMENTATION_GUIDE.md
emeet_cli/: camera.py  cli.py  uvc.py  v4l2.py
